# NLP_Toolkit

./: CMakeLists.txt  NLP_Toolkit.sln  NLP_Toolkit.vcxproj  NLP_Toolkit.vcxproj.filters  README.md  ThreadPool.cpp  ThreadPool.h  Tokenizer.cpp  Tokenizer.h  Toolkit.cpp  Toolkit.h  main.cpp  pybind_NLP_Toolkit.cpp  special_characters.txt
BuildPy/: CMakeLists.txt  README.md  pyproject.toml  setup.py
BuildPy/pynlptoolkit/: Tokenizer.cpp  Tokenizer.h  Toolkit.cpp  Toolkit.h  pybind_Toolkit.cpp
NLP_Toolkit/x64/Debug/: NLP_Toolkit.exe.recipe  vc143.idb
NLP_Toolkit/x64/Debug/NLP_Toolkit.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  NLP_Toolkit.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
